# MLOps-HWs

./: README.md  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/582882954648270174/: meta.yaml
mlruns/582882954648270174/4b97ce68b9d44d9dae927b509cf92105/: meta.yaml
mlruns/824106438377548297/: meta.yaml
mlruns/824106438377548297/142f317f9499452b83732a9543fcc357/: meta.yaml
mlruns/824106438377548297/190136947cbf4c3db1a0acacf9a79ab0/: meta.yaml
mlruns/824106438377548297/35806427373147829b18ef4d1bdccce0/: meta.yaml
mlruns/824106438377548297/42467a06d1a445269954af36fd17ace9/: meta.yaml
mlruns/824106438377548297/54d3eb71c9654ef38b4af9f16357f6e4/: meta.yaml
mlruns/824106438377548297/5ad3f2d6e7c64c979966883aa5cb2c0a/: meta.yaml
mlruns/824106438377548297/92882f796124435999f059a20db00aeb/: meta.yaml
mlruns/824106438377548297/982f03ef3d504a4aab8587d9d93945bf/: meta.yaml
mlruns/824106438377548297/dcd91d0b113042598a6933c43fe2c213/: meta.yaml
mlruns/824106438377548297/f6e02878c52f40c5ae9cc3789fd3c006/: meta.yaml
mlruns/824106438377548297/fa76b4e6fc8442c598f6bdac1a3edd8d/: meta.yaml
mlruns/909785716417862441/: meta.yaml
mlruns/909785716417862441/ec0803e4b3cf49728d83f602d431aaf4/: meta.yaml
mlruns/909785716417862441/f0cb26b1be9b45ff86e9e42c2a7717fb/: meta.yaml
mlruns/models/sk-learn-logistic-regression-model/: meta.yaml
practice_2/: temperature_24h.csv
practice_4/: catboost_best.cbm  experiments.ipynb
practice_4/artifacts/: catboost_best.cbm
practice_4/catboost_info/: time_left.tsv
practice_4/mlruns/0/: meta.yaml
practice_5/: Dockerfile  a.md
practice_5/models/: metrics.json
practice_6/app/: main.py
(+364 files in other folders)
