[project]
name = "mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "albert",email = "shoma.albert081205@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc (>=3.64.0,<4.0.0)",
    "clearml (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
