[project]
name = "mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "albert",email = "shoma.albert081205@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc (>=3.64.0,<4.0.0)",
    "clearml (>=2.0.2,<3.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "ultralytics (>=8.3.233,<9.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
